timerhistory + distractiontag fixes